[gd_scene load_steps=19 format=3 uid="uid://jt41idprgpg0"]

[ext_resource type="Script" path="res://battle/character/enemy.gd" id="1_ut5p0"]
[ext_resource type="Texture2D" uid="uid://cqb27y2kfaj8s" path="res://art/characters/2 Hyena/Hyena_idle.png" id="2_2uc7v"]
[ext_resource type="Texture2D" uid="uid://cq2cpel4auagt" path="res://art/characters/2 Hyena/Hyena_attack.png" id="3_8yl68"]
[ext_resource type="Texture2D" uid="uid://brncm31o8fgfk" path="res://art/characters/2 Hyena/Hyena_hurt.png" id="4_5alss"]
[ext_resource type="PackedScene" uid="uid://b4r044agighkj" path="res://battle/status/char_status_ui.tscn" id="5_aa57n"]
[ext_resource type="Texture2D" uid="uid://mivpe7n1ltet" path="res://art/characters/2 Hyena/Hyena_death.png" id="5_u6ddg"]
[ext_resource type="Texture2D" uid="uid://x85fmuuyvt8a" path="res://art/icon/1/Skillicon1_23.png" id="6_5y5jx"]
[ext_resource type="Theme" uid="uid://dau5p77g7wf6n" path="res://theme.tres" id="8_3cqks"]
[ext_resource type="Texture2D" uid="uid://b7js6jw42k6lp" path="res://art/using/blank.png" id="8_k6h25"]
[ext_resource type="TileSet" uid="uid://bdnbatw8to8ft" path="res://tiles/scenes.tres" id="10_5jw6i"]

[sub_resource type="Animation" id="Animation_rjbyw"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/DeceasedIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_y0xbh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/DeceasedIdle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/DeceasedHurt:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/DeceasedHurt:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/DeceasedDeath:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/DeceasedDeath:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Graphic/DeceasedAttack:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Graphic/DeceasedAttack:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_twlpc"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/DeceasedAttack:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/DeceasedAttack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/DeceasedIdle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_x224k"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/DeceasedDeath:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/DeceasedDeath:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/DeceasedIdle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/DeceasedHurt:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_esyv6"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/DeceasedIdle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/DeceasedHurt:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/DeceasedHurt:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmnkc"]
_data = {
"Idle": SubResource("Animation_rjbyw"),
"RESET": SubResource("Animation_y0xbh"),
"attack": SubResource("Animation_twlpc"),
"die": SubResource("Animation_x224k"),
"hurt": SubResource("Animation_esyv6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q378b"]
size = Vector2(205, 225)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctoue"]
size = Vector2(115, 66)

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(-2, -2)
script = ExtResource("1_ut5p0")
max_health = 60

[node name="Graphic" type="Node2D" parent="."]
position = Vector2(0, 14)

[node name="DeceasedIdle" type="Sprite2D" parent="Graphic"]
position = Vector2(78, 17)
scale = Vector2(5, 5)
texture = ExtResource("2_2uc7v")
hframes = 4
frame = 2

[node name="DeceasedAttack" type="Sprite2D" parent="Graphic"]
visible = false
position = Vector2(78, 22)
scale = Vector2(5, 5)
texture = ExtResource("3_8yl68")
hframes = 6
frame = 1

[node name="DeceasedHurt" type="Sprite2D" parent="Graphic"]
visible = false
position = Vector2(78, 20)
scale = Vector2(5, 5)
texture = ExtResource("4_5alss")
hframes = 2
frame = 1

[node name="DeceasedDeath" type="Sprite2D" parent="Graphic"]
visible = false
position = Vector2(78, 18)
scale = Vector2(5, 5)
texture = ExtResource("5_u6ddg")
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gmnkc")
}

[node name="BaseStatusUI" parent="." instance=ExtResource("5_aa57n")]

[node name="TargetUI" type="Sprite2D" parent="."]
visible = false
position = Vector2(102, 80)
scale = Vector2(3.40625, 3.40625)
texture = ExtResource("6_5y5jx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(105.5, 125.5)
shape = SubResource("RectangleShape2D_q378b")

[node name="StatuChange" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 118.0
offset_top = 191.0
offset_right = 158.0
offset_bottom = 231.0

[node name="ActionUI" type="HBoxContainer" parent="."]
offset_left = 54.0
offset_top = -40.0
offset_right = 184.0
offset_bottom = 40.0
theme_override_constants/separation = -10

[node name="TextureRect" type="TextureRect" parent="ActionUI"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("8_k6h25")
expand_mode = 5

[node name="Label" type="Label" parent="ActionUI"]
layout_mode = 2
theme = ExtResource("8_3cqks")
theme_override_font_sizes/font_size = 40
text = "99
"

[node name="DescArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DescArea"]
position = Vector2(123.5, 0)
shape = SubResource("RectangleShape2D_ctoue")

[node name="DescUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 217.0
offset_top = -29.0
offset_right = 257.0
offset_bottom = 11.0

[node name="TileMap" type="TileMap" parent="DescUI"]
position = Vector2(-38, -4)
scale = Vector2(1.78282, 1.88252)
tile_set = ExtResource("10_5jw6i")
format = 2
layer_0/tile_data = PackedInt32Array(0, 3145730, 4, 5, 3276802, 4, 327680, 3145730, 6, 327685, 3276802, 6, 327681, 3211266, 6, 327682, 3211266, 6, 327683, 3211266, 6, 327684, 3211266, 6, 262144, 3145730, 5, 196608, 3145730, 5, 131072, 3145730, 5, 65536, 3145730, 5, 1, 3211266, 4, 2, 3211266, 4, 3, 3211266, 4, 4, 3211266, 4, 65541, 3276802, 5, 131077, 3276802, 5, 196613, 3276802, 5, 262149, 3276802, 5, 65537, 3211266, 5, 65538, 3211266, 5, 65539, 3211266, 5, 65540, 3211266, 5, 131076, 3211266, 5, 196612, 3211266, 5, 262148, 3211266, 5, 262147, 3211266, 5, 262146, 3211266, 5, 196610, 3211266, 5, 196609, 3211266, 5, 131073, 3211266, 5, 131074, 3211266, 5, 131075, 3211266, 5, 196611, 3211266, 5, 262145, 3211266, 5)

[node name="Label" type="Label" parent="DescUI"]
layout_mode = 0
offset_left = -30.0
offset_top = 9.0
offset_right = 110.0
offset_bottom = 173.0
theme = ExtResource("8_3cqks")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "qqq"
autowrap_mode = 2

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="DescArea" to="." method="_on_desc_area_mouse_entered"]
[connection signal="mouse_exited" from="DescArea" to="." method="_on_desc_area_mouse_exited"]
